Fix FAB not showing

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
     height: 100%;
     width: 100vw;
     overflow: scroll;
+    position: relative;
 }
 
 .Player {
